--- a/Optimizer/QuantConnect.Optimizer.csproj
+++ b/Optimizer/QuantConnect.Optimizer.csproj
@@ -38,6 +38,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,12 +52,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LeanOptimizer.cs" />
+    <Compile Include="Minimization.cs" />
+    <Compile Include="Maximization.cs" />
+    <Compile Include="Extremum.cs" />
     <Compile Include="EulerSearch.cs" />
     <Compile Include="GridSearch.cs" />
     <Compile Include="IOptimizationStrategy.cs" />
     <Compile Include="IOptimizationManager.cs" />
     <Compile Include="BruteForceOptimizer.cs" />
     <Compile Include="OptimizationEventArgs.cs" />
+    <Compile Include="OptimizationNodePacket.cs" />
     <Compile Include="OptimizationParameter.cs" />
     <Compile Include="OptimizationResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,7 +69,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Common\QuantConnect.csproj">
+      <Project>{2545C0B4-FABB-49C9-8DD1-9AD7EE23F86B}</Project>
+      <Name>QuantConnect</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
