--- a/Optimizer.Launcher/config.json
+++ b/Optimizer.Launcher/config.json
@@ -1,13 +1,12 @@
 {
-  // optional
-  // algorithm class selector
-  //"algorithm-type-name": "BasicTemplateFrameworkAlgorithm",
+  // optional: algorithm class selector
+  "algorithm-type-name": "ParameterizedAlgorithm",
 
-  // Algorithm language selector - options CSharp, FSharp, VisualBasic, Python, Java
-  //"algorithm-language": "CSharp",
+  // optional: Algorithm language selector - options CSharp, FSharp, VisualBasic, Python, Java
+  "algorithm-language": "CSharp",
 
-  // Physical DLL location
-  //"algorithm-location": "QuantConnect.Algorithm.CSharp.dll",
+  // optional: Physical DLL location
+  "algorithm-location": "QuantConnect.Algorithm.CSharp.dll",
 
   // How we manage solutions and make decision to continue or stop
   "optimization-strategy": "QuantConnect.Optimizer.GridSearchOptimizationStrategy",
@@ -21,31 +20,37 @@
     "extremum": "max",
 
     // optional, if defined and backtest complies with the targets then trigger ended event
-    "target-value": 100
+    "target-value": 3
   },
 
   // if it doesn't comply just drop the backtest
   "constraints": [
     {
       "target": "Drawdown",
-      "operator": "lessOrEqual",
-      "target-value": 0.3
+      "operator": "lessOrEqual", // less, greaterOrEqual, greater, notEqual, equals
+      "target-value": 0.15
+    },
+    {
+      "target": "Total Trades",
+      "operator": "greater",
+      "target-value": 2
     }
   ],
 
+  // optional: default is process count / 2
   //"maximum-concurrent-backtests": 10,
 
   // optimization parameters
   "parameters": {
     "ema-slow": {
-      "min": 1,
-      "max": 100,
-      "step": 0.5
+      "min": 10,
+      "max": 50,
+      "step": 10
     },
     "ema-fast": {
-      "min": 20,
-      "max": 200,
-      "step": 2
+      "min": 50,
+      "max": 150,
+      "step": 50
     }
   }
 }
